<resources>
    <string name="app_name">Nevermind</string>
    <string name="package_name">name.leesah.nirvana</string>
    <string name="website_url">https://nevermindapp.leesah.name</string>

    <!-- MainActivity navigation-->
    <string name="navigation_settings">Settings</string>
    <string name="navigation_medications">Medicines</string>
    <string name="navigation_reminders">Today</string>

    <string name="no_reminders_for_today">No intake for today.</string>
    <string name="no_medication">Start by adding a medicine.</string>

    <!-- MedicationActivity titles -->
    <string name="add_medication">New medicine</string>
    <string name="edit_medication">%s</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>

    <!-- Errors -->
    <string name="err_dosage_already_added">Dosage already added for that time.</string>

    <!-- Treatment -->
    <string name="treatment_recurring_none">Not recurring</string>
    <string name="treatment_recurring_n_times">For n Times</string>
    <string name="treatment_recurring_until_date">Until date</string>

    <!-- Treatment preference titles & summaries -->
    <string name="pref_title_treatment">Treatment cycles</string>
    <string name="pref_summary_treatment">Enable and disable cycled treatment support.</string>
    <string name="pref_title_treatment_enabled">Cycled treatment</string>
    <string name="pref_summary_treatment_enabled">Define when a treatment cycle starts and ends, and how it recurs. Medicine intake reminders will adapt accordingly.</string>
    <string name="prefcat_title_treatment_first_cycle">Treatment cycle</string>
    <string name="pref_title_treatment_first_day">First Day</string>
    <string name="pref_title_treatment_cycle_length">Length of cycle</string>
    <string name="prefcat_title_treatment_recurring">Recurring</string>
    <string name="pref_title_treatment_recurring_n_times">Number of recurring times</string>
    <string name="pref_summary_treatment_recurring_n_times">Including the first cycle</string>
    <string name="pref_title_treatment_recurring_until_date">Last day</string>
    <string name="pref_summary_treatment_recurring_until_date">Treatment recurs until the date (exclusively)</string>
    <string name="pref_title_treatment_recurring">Treatment cycle recurring</string>
    <string name="alert_toggle_treatment_title">Cycled treatment</string>
    <string name="alert_toggle_treatment_message">Custom starting settings of all medications will be lost. This can not be undone. Do you want to continue?</string>

    <!-- Medication -->
    <string name="medication_repeating_everyday">Everyday</string>
    <string name="medication_repeating_every_n_days">Every n days</string>
    <string name="medication_repeating_days_of_week">Days of week</string>
    <string name="medication_reminding_certain_hours">At certain hours</string>
    <string name="medication_reminding_every_n_hours">Every n hours</string>
    <string name="medication_reminding_n_times_a_day">N times a day</string>
    <string name="medication_starting_switch_text_on" />
    <string name="medication_starting_switch_text_off" />
    <string name="medication_starting_relative_immediately">Do not delay</string>
    <string name="medication_starting_relative_by_period">Delay for certain period</string>
    <string name="medication_starting_relative_summary_on">Set delayed period</string>
    <string name="medication_starting_relative_summary_off">Do not delay</string>
    <string name="medication_starting_exact_date_summary_off">Today</string>
    <string name="medication_starting_exact_date_summary_on">Set start date</string>
    <string name="medication_stopping_with_cycle">Do not stop (unless treatment cycle ends)</string>
    <string name="medication_stopping_after_period">Stop after certain period</string>
    <string name="medication_stopping_summary_on" >Set when to stop</string>
    <string name="medication_stopping_summary_off" >Do not stop (until treatment ends)</string>
    <string name="medication_stopping_switch_text_off" />
    <string name="medication_stopping_switch_text_on" />
    <string name="everyday">@string/medication_repeating_everyday</string>
    <string name="to_string_medication_repeating_every_n_days">Every %d days</string>
    <string name="to_string_medication_repeating_days_of_week">Every week on %s</string>
    <string name="to_string_starting_immediately">Do not delay</string>
    <string name="to_string_starting_after_period">Delay for %s</string>
    <string name="to_string_stopping_after_period">Stop in %s</string>

    <!-- Medication preference titles & summaries-->
    <!--   * Basics -->
    <string name="prefcat_title_medication_basics">Information</string>
    <string name="pref_title_medication_name">Name</string>
    <string name="pref_summary_medication_name">Displayed in notifications</string>
    <string name="pref_title_medication_manufacturer">Manufacturer</string>
    <string name="pref_summary_medication_manufacturer">(optional)</string>
    <string name="pref_title_dosage_form">Dosage form</string>
    <string name="pref_summary_dosage_form">The form of the medicine doses</string>
    <string name="prefcat_title_medication_strategies">Intakes</string>
    <string name="prefcat_summary_medication_strategies">The intake patterns</string>
    <!--   * Reminding -->
    <string name="pref_title_medication_reminding">Hours of day</string>
    <string name="pref_summary_medication_reminding">On which hours of day is the medicine taken</string>
    <string name="prefcat_title_medication_reminding">Reminding model</string>
    <!--   * Repeating -->
    <string name="pref_title_medication_repeating">Days</string>
    <string name="prefcat_title_medication_repeating">Repeating model</string>
    <string name="pref_title_medication_repeating_every_n_days">Interval (in days)</string>
    <!--   * Starting -->
    <string name="pref_title_medication_starting">Starting</string>
    <!--   * Stopping -->
    <string name="pref_title_medication_stopping">Stopping</string>

    <string name="prefcat_title_details">Details</string>

    <!-- Notification -->
    <string name="notification_channel_id_reminder">name.leesah.nirvana:notification_channel:REMINDER</string>
    <string name="notification_channel_name_reminder">Medication reminders</string>
    <string name="notification_channel_description_reminder">Medication reminders</string>
    <string name="notification_title">Time to take %1$s</string>
    <plurals name="notification_text">
        <item quantity="one">Take %1$d dose at %2$s.</item>
        <item quantity="other">Take %1$d doses at %2$s.</item>
    </plurals>
    <string name="done">Done</string>

    <!-- Settings -->
    <string name="prefcat_title_preferences">Preferences</string>

    <string name="prefcat_title_information">Information</string>
    <string name="pref_title_website">Visit website</string>
    <string name="pref_title_about">About</string>

    <string name="monday_of_week">Mon</string>
    <string name="tuesday_of_week">Tue</string>
    <string name="wednesday_of_week">Wed</string>
    <string name="thursday_of_week">Thu</string>
    <string name="friday_of_week">Fri</string>
    <string name="saturday_of_week">Sat</string>
    <string name="sunday_of_week">Sun</string>

    <!-- TimedDosage -->
    <string name="comma_equivalent">", "</string>
    <string name="to_string_every_n_hours_starting_at">starting from %s</string>
    <string name="to_string_every_n_hours">%1$s %2$s, starting at %3$s</string>
    <string name="note_no_more_intakes">No more intakes for today.</string>
    <string name="note_time_until_next_intake">%s until next intake.</string>
    <string name="unknown_medication">Unknown Medication</string>
    <string name="reminder_details">Details</string>
    <string name="ignore_reminder">Ignore</string>
    <string name="alert_abort_medication_title">Abort</string>
    <string name="alert_abort_medication_message">Do you want to abort the change?</string>
    <string name="alert_delete_medication_title">Delete</string>
    <string name="alert_delete_medication_message">Do you want to delete %s?</string>
    <string name="err_medication_name_empty">Name cannot be empty.</string>
    <string name="err_medication_form_empty">Dosage form cannot be empty.</string>
    <string name="err_medication_reminding_empty">Reminding strategy cannot be empty.</string>
    <string name="err_medication_repeating_empty">Repeating strategy cannot be empty</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="stopping_until_cycle_ends">Until treatment cycle ends</string>
    <string name="stopping_never">Never</string>
    <string name="to_string_recurring_until_date">Recurs until %s</string>
    <string name="refresh">Refresh</string>
    <string name="add_an_intake">Add an intake.</string>
    <plurals name="to_string_timed_dosage">
        <item quantity="one">%1$d unit at %2$s</item>
        <item quantity="other">%1$d units at %2$s</item>
    </plurals>
    <plurals name="to_string_every_n_hours_every_n_hours">
        <item quantity="one">every hour</item>
        <item quantity="other">every %d hours</item>
    </plurals>
    <plurals name="var_doses" >
        <item quantity="one">%d dose</item>
        <item quantity="other">%d doses</item>
    </plurals>
    <plurals name="to_string_recurring_n_times">
        <item quantity="one">Not recurring (single cycle treatment)</item>
        <item quantity="other">%d cycles in total</item>
    </plurals>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://nirvana.leesah.name\",\n  }\n}]</string>
    <string name="feature_in_development">I am still working on this feature. Please stay tuned.</string>

    <!-- Reminding: Every N Hours -->
    <string name="amount">Amount</string>
    <string name="interval">Interval</string>
    <string name="starting_at">Starting at</string>

</resources>
