<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/medication_reminding_details_every_n_hours"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.medication.reminding.EveryNHoursEditFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Take"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="70dp" />

        <NumberPicker
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="62dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/dosage_form_tablets"
            tools:layout_editor_absoluteX="134dp"
            tools:layout_editor_absoluteY="70dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="every"
            tools:layout_editor_absoluteX="202dp"
            tools:layout_editor_absoluteY="70dp" />

        <NumberPicker
            android:id="@+id/every_n"
            android:layout_width="wrap_content"
            android:layout_height="128dp"
            android:layout_margin="4dp"
            tools:layout_editor_absoluteX="252dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="hours"
            tools:layout_editor_absoluteX="324dp"
            tools:layout_editor_absoluteY="70dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Starting from"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="70dp" />

        <name.leesah.nirvana.ui.tweaks.LimitedMinutesTimePicker
            android:id="@+id/first_dose_time"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:layout_margin="4dp"
            android:timePickerMode="spinner"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>
</LinearLayout>
