...
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:maxLines="1"
                    android:text="at" />

                <name.leesah.nirvana.ui.widget.LimitedMinutesTimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:timePickerMode="spinner" />

            </LinearLayout>

...

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>
...
